hw3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ulas-flask-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ulas-flask-app
  template:
    metadata:
      labels:
        app: ulas-flask-app
    spec:
      containers:
      - name: ulas-flask-app
        image: ulaj/ulas-flask-app
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
