hw3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ulas-flask-app-service
spec:
  type: LoadBalancer
  selector:
    app: ulas-flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
